Rest API for Store, Product (Hanna Bernyk)
