# src/main/java/com/algonquincollege/cst8277/rest/StoreResource.java
@@ -13,6 +13,8 @@ import static com.algonquincollege.cst8277.utils.MyConstants.CUSTOMER_RESOURCE_N
 import static com.algonquincollege.cst8277.utils.MyConstants.RESOURCE_PATH_ID_ELEMENT;
 import static com.algonquincollege.cst8277.utils.MyConstants.RESOURCE_PATH_ID_PATH;
 import static com.algonquincollege.cst8277.utils.MyConstants.STORE_RESOURCE_NAME;
+import static javax.ws.rs.core.Response.Status.NOT_FOUND;
+import static javax.ws.rs.core.Response.Status.OK;
 
 import java.util.List;
 
@@ -20,7 +22,9 @@ import javax.ejb.EJB;
 import javax.inject.Inject;
 import javax.servlet.ServletContext;
 import javax.ws.rs.Consumes;
+import javax.ws.rs.DELETE;
 import javax.ws.rs.GET;
+import javax.ws.rs.POST;
 import javax.ws.rs.Path;
 import javax.ws.rs.PathParam;
 import javax.ws.rs.Produces;
@@ -28,6 +32,7 @@ import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
 
 import com.algonquincollege.cst8277.ejb.CustomerService;
+import com.algonquincollege.cst8277.models.CustomerPojo;
 import com.algonquincollege.cst8277.models.StorePojo;
 
 @Path(STORE_RESOURCE_NAME)
@@ -58,4 +63,30 @@ public class StoreResource {
         return response;
     }
 
+    @POST
+    public Response addStore(StorePojo newStore) {
+      Response response = null;
+      StorePojo saveCustomerPojo = customerServiceBean.persistStore(newStore);
+      response = Response.ok(newStore).build();
+      return response;
+    }
+
+    @DELETE
+    @Path("{id}")
+    public Response deleteStoreById(@PathParam(RESOURCE_PATH_ID_ELEMENT) int id) {
+        servletContext.log("try to delete specific store " + id);
+        Response response = null;
+        Boolean result = true;
+
+        result = customerServiceBean.deleteStoreById(id);
+        response = Response.status( result == false ? NOT_FOUND : OK).entity(result).build();
+        /*
+         * if (sc.isCallerInRole(ADMIN_ROLE)) {
+         * result = customerServiceBean.deleteStoreById(id);
+         * response = Response.status( result == false ? NOT_FOUND : OK).entity(result).build();
+         * }else {
+         * response = Response.status(BAD_REQUEST).build();
+         * }
+         */        return response;
+    }
 }
